extended type to PATH variable contents